# Hephaestus-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  conanfile.py  config.cmake  name-version.txt  util.cmake
shaders/: triangle.vert
src/: ErrorUtils.cpp  ErrorUtils.hpp  VulkanContext.cpp  VulkanContext.hpp  main.cpp  utils.hpp
